objects/Quote_Premium_Rates__c.object
<CustomObject>
    <description>this is Heron Premium rates data within Quote Response Association</description>
    <fields>
        <fullName>AssoRecordIdentifier__c</fullName>
        <description>this data is used in the apex code to map to the associated Association record.</description>
        <label>AssoRecordIdentifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Count_Final__c</fullName>
        <label>Projected Enrollment [final]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Count_Initial__c</fullName>
        <label>Projected Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Count_Sold__c</fullName>
        <label>Projected Enrollment [sold]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Requested_Premium__c</fullName>
        <label>Final Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Requested_Premium__c</fullName>
        <label>Initial Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Rates_Final__c</fullName>
        <label>Projected Rates [final]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Rates_Initial__c</fullName>
        <label>Projected Rates</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Projected_Rates_sold__c</fullName>
        <label>Projected Rates [sold]</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Association_Initial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Association</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Rate_Version__c</field>
                <operation>equals</operation>
                <value>Initial</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quote_Response_Association__c</referenceTo>
        <relationshipLabel>Initial Premium Rate</relationshipLabel>
        <relationshipName>Initial_Premium_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Association_sold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Association [sold]</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Rate_Version__c</field>
                <operation>equals</operation>
                <value>Sold</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quote_Response_Association__c</referenceTo>
        <relationshipLabel>Sold Premium Rates</relationshipLabel>
        <relationshipName>Sold_Premium_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Response_Association__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Association [final]</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Rate_Version__c</field>
                <operation>equals</operation>
                <value>Final</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Quote_Response_Association__c</referenceTo>
        <relationshipLabel>Final Premium Rates</relationshipLabel>
        <relationshipName>Heron_Premium_Rates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Tier__c</fullName>
        <label>Rate Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2 Tier</fullName>
                </value>
                <value>
                    <fullName>3 Tier</fullName>
                </value>
                <value>
                    <fullName>4 Tier</fullName>
                </value>
                <value>
                    <fullName>5 Tier</fullName>
                </value>
                <value>
                    <fullName>Comp Tier</fullName>
                </value>
                <value>
                    <fullName>Curr Tier</fullName>
                </value>
                <value>
                    <fullName>Sold Tier</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Student 2 Child Cap</fullName>
                </value>
                <value>
                    <fullName>Student 3 Child Cap</fullName>
                </value>
                <value>
                    <fullName>Student All Children</fullName>
                </value>
                <value>
                    <fullName>Student Athlete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_Version__c</fullName>
        <label>Rate Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sold_Premium__c</fullName>
        <label>Sold Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_Final__c</fullName>
        <label>Tier [final]</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Initial__c</fullName>
        <label>Tier</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tier_Order_final__c</fullName>
        <defaultValue>0</defaultValue>
        <description>this number is the Order number from the custom setting &quot;Heron Prem Rate Tier Order Mapping&quot;. The order is used to sort the order in display from the related list. not showing on UI.</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Order_initial__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Order_sold__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_sold__c</fullName>
        <label>Tier [sold]</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <label>Quote Premium Rate</label>
    <nameField>
        <label>Rates Tier (Name)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Premium Rates</pluralLabel>
    <recordTypes>
        <fullName>Premium</fullName>
        <active>true</active>
        <label>Premium</label>
    </recordTypes>
    <recordTypes>
        <fullName>Premium_Initial</fullName>
        <active>true</active>
        <label>Premium-Initial</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>